Revision history for Test-BrewBuild

0.06    x
        - added 'on' param, send in a list of perl versions to run against,
          instead of the default all (closes #17)
        - renamed 'change' param to 'new', kept change for backwards
          compatibility reasons (closes #23)

0.05    2016-03-18
        - we now recognize when Module::Build is being used, as opposed
          to EUMM, and it works properly (fixes #12)
        - *brew exec commands are now loaded via a plugin architecture. Set by
           the '-p|--plugin' or an environment variable, plugin writing is
           exceptionally simplistic
        - added --remove, performs as --reload, and kept the latter for
          backwards compatibility
        - fix undef issue in Plugin.pm if a plugin name can't be found
        - --debug param now accepts a level param (0-7) to set the level (added
          Logging::Simple as prereq)
        - remove all prereqs from Makefile.PL that are already in core
          (closes #15)
        - add prereqs that aren't in core as of v5.8 into Makefile.PL (closes
          #20)
        - completely peppered the modules with various debugging level
          statements
        - added POD in Test::BrewBuild::Plugin


0.04    2016-03-16
        - testing now properly works across all installed perls
        - the exec file is now auto-generated with File::Temp, and unlinked
          after use (closes #9)
        - install now skips and warns (w/ debug) if a version it's trying to
          install is already installed (closes #8)
        - added POD for both the script and module (closes #5)

0.03    2016-03-01
        - App::cpanminus now a prereq
        - fixed issue in split in results() (fixes #6)

0.02    2016-02-23
        - implemented Object Oriented approach
        - added _test_file(), returns the test file brew will run (uses
          File::Temp)
        - added t/01-test_file.t
        - added POD (closes #3)