@@ -3,6 +3,7 @@ Changes
 lib/Test/BrewBuild.pm
 lib/Test/BrewBuild/Plugin.pm
 lib/Test/BrewBuild/Plugin/DefaultExec.pm
+lib/Test/BrewBuild/Plugin/UnitTestPluginInst.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
