@@ -1,0 +1,6 @@
+package Test::BrewBuild::Plugin::UnitTestPluginInst;
+
+sub brewbuild_exec {
+    return "test plugin";
+}
+1;
