@@ -5,6 +5,9 @@ Revision history for Test-BrewBuild
           instead of the default all (closes #17)
         - renamed 'change' param to 'new', kept change for backwards
           compatibility reasons (closes #23)
+        - we can now load non-installed local plugins by specifying the full or
+          relative path name plus name of file to the --plugin param (closes
+          #24)
 
 0.05    2016-03-18
         - we now recognize when Module::Build is being used, as opposed
